fdc-commit  new sections into index.html and cahnged items in section to blocks

--- a/index.html
+++ b/index.html
@@ -57,7 +57,31 @@
             <p class="para_c1_line"></p>
         </div>
         <section class="section">
-
+            <div class="block">
+                <h2 class="block-title">KLASSISCHES HUNDETRAINING</h2>
+                <p class="block-text">Alles rund um das Leben mit Hund im Alltag. So werden Sie zu einem guten!</p>
+                <div class="content-container">
+                    <ul class="block-list">
+                        <li>Grundkommandos</li>
+                        <li>Welpenförderung und -sozialisierung</li>
+                        <li>Lernverhalten, Psychologie des Hundes</li>
+                        <li>Aufbau des Vertrauensverhältnisses</li>
+                        <li>Souveräne Führung</li>
+                        <li>Alltagssituationen meistern</li>
+                        <li>Mehrhundehaltung</li>
+                    </ul>
+                    <img src="pictures/sectionC1Pic.png" alt="Beschreibung des Bildes" class="block-image">
+                </div>
+            </div>                    
+            <div class="block">
+                <h2 class="block-title">Block 2</h2>
+            </div>
+            <div class="block">
+                <h2 class="block-title">Block 3</h2>
+            </div>
+            <div class="block">
+                <h2 class="block-title">Block 4</h2>
+            </div>
         </section>
         <div class="historie_text_container">
           <p class="para_c1_line"></p>
