fdc-commit  the block-bug and finished block-section / 4. block list still missing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/components/header.css">
     <link rel="stylesheet" href="CSS/components/headerPic.css">
     <link rel="stylesheet" href="CSS/components/mainStart.css">
-    <link rel="stylesheet" href="CSS/components/section.css">
+    <link rel="stylesheet" href="CSS/components/sections.css">
     <link rel="stylesheet" href="CSS/components/homeText.css">
     <link rel="stylesheet" href="CSS/components/historieText.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
@@ -70,17 +70,65 @@
                         <li>Alltagssituationen meistern</li>
                         <li>Mehrhundehaltung</li>
                     </ul>
-                    <img src="pictures/sectionC1Pic.png" alt="Beschreibung des Bildes" class="block-image">
+                    <ul class="image-button-container">
+                        <img src="pictures/sectionC1Pic.png" alt="Beschreibung des Bildes" class="block-image">
+                        <button class="block-list-button">Preise und Kontakt</button>
+                    </ul>
                 </div>
             </div>                    
             <div class="block">
-                <h2 class="block-title">Block 2</h2>
+                <h2 class="block-title">TEAM-ARBEIT / ANLAGEFÖRDERUNG</h2>
+                <p class="block-text">Ist Ihr Hund ein Jäger? Oder ein echter Nasenprofi? Wir finden gemeinsam heraus, wo die Stärken Ihres Hundes liegen und wie Sie für eine optimale Auslastung sorgen können.</p>
+                <div class="content-container">
+                    <ul class="block-list">
+                        <li>Anlagenanalyse und –förderung</li>
+                        <li>Team-Arbeit</li>
+                        <li>Man-Trailing</li>
+                        <li>Fährtensuche</li>
+                    </ul>
+                    <ul class="image-button-container">
+                        <img src="pictures/sectionC2Pic.png" alt="Beschreibung des Bildes" class="block-image">
+                        <button class="block-list-button">Preise und Kontakt</button>
+                    </ul>
+                </div>
             </div>
             <div class="block">
-                <h2 class="block-title">Block 3</h2>
+                <h2 class="block-title">TEAM-ARBEIT / ANLAGEFÖRDERUNG</h2>
+                <div class="content-container">
+                    <ul class="block-list">
+                        <p class="block-list-text">Sie betreiben ein Sicherheitsunternehmen</p>
+                        <p class="block-list-text">oder sind Diensthundeführer und erfüllen</p>
+                        <p class="block-list-text">damit die nötige gesetzliche Voraussetzung</p>
+                        <p class="block-list-text">einen Hund seinen Anlagen enstprechend</p>
+                        <p class="block-list-text">als Schutz- oder Sprengstoffspürhund </p>
+                        <p class="block-list-text">auszubilden.</p>
+                        <p class="block-list-text">Dann kontaktieren Sie mich gerne.</p>
+                    </ul>
+                    <ul class="image-button-container">
+                        <img src="pictures/sectionC3Pic.png" alt="Beschreibung des Bildes" class="block-image">
+                        <button class="block-list-button">Preise und Kontakt</button>
+                    </ul>
+                </div>
             </div>
             <div class="block">
-                <h2 class="block-title">Block 4</h2>
+                <h2 class="block-title">TEAM-ARBEIT / ANLAGEFÖRDERUNG</h2>
+                <div class="content-container">
+                    <ul>
+                        <ul class="block-list">
+                            <p class="block-list-text">Sie möchten mehr über Hunde wissen?</p>
+                            <p class="block-list-text">Oder benötigen eine individuelle Beratung</p>
+                            <p class="block-list-text">vor der Anschaffung Ihres Hundes?</p>
+                            <p class="block-list-text">Sie benötigen die erforderliche</p>
+                            <p class="block-list-text">Erlaubnis zum Halten von großen</p>
+                            <p class="block-list-text">Hunden oder Hunden bestimmter</p>
+                            <p class="block-list-text">Rassen. Dann kontaktieren Sie mich!</p>
+                        </ul>
+                    </ul>
+                    <ul class="image-button-container">
+                        <img src="pictures/sectionC4Pic.png" alt="Beschreibung des Bildes" class="block-image">
+                        <button class="block-list-button">Preise und Kontakt</button>
+                    </ul>
+                </div>
             </div>
         </section>
         <div class="historie_text_container">
