fdc-commit  footer and fixed section on pic 4

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <link rel="stylesheet" href="CSS/components/sections.css">
     <link rel="stylesheet" href="CSS/components/homeText.css">
     <link rel="stylesheet" href="CSS/components/historieText.css">
+    <link rel="stylesheet" href="CSS/components/footer.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <div class="logo-container">
-            <img src="pictures/lukaslogo.jpg" alt="Falke Dog Coaching Logo" class="logo-image">
+            <img src="pictures/logo.jpg" alt="Falke Dog Coaching Logo" class="logo-image">
         </div>
         <div class="nav-item"><a href="#home" class="nav-link">HOME</a></div>
         <div class="nav-item"><a href="#philosophie" class="nav-link">PHILOSOPHIE</a></div>
@@ -113,16 +114,14 @@
             <div class="block">
                 <h2 class="block-title">TEAM-ARBEIT / ANLAGEFÖRDERUNG</h2>
                 <div class="content-container">
-                    <ul>
-                        <ul class="block-list">
-                            <p class="block-list-text">Sie möchten mehr über Hunde wissen?</p>
-                            <p class="block-list-text">Oder benötigen eine individuelle Beratung</p>
-                            <p class="block-list-text">vor der Anschaffung Ihres Hundes?</p>
-                            <p class="block-list-text">Sie benötigen die erforderliche</p>
-                            <p class="block-list-text">Erlaubnis zum Halten von großen</p>
-                            <p class="block-list-text">Hunden oder Hunden bestimmter</p>
-                            <p class="block-list-text">Rassen. Dann kontaktieren Sie mich!</p>
-                        </ul>
+                    <ul class="block-list">
+                        <p class="block-list-text">Sie möchten mehr über Hunde wissen?</p>
+                        <p class="block-list-text">Oder benötigen eine individuelle Beratung</p>
+                        <p class="block-list-text">vor der Anschaffung Ihres Hundes?</p>
+                        <p class="block-list-text">Sie benötigen die erforderliche</p>
+                        <p class="block-list-text">Erlaubnis zum Halten von großen</p>
+                        <p class="block-list-text">Hunden oder Hunden bestimmter</p>
+                        <p class="block-list-text">Rassen. Dann kontaktieren Sie mich!</p>
                     </ul>
                     <ul class="image-button-container">
                         <img src="pictures/sectionC4Pic.png" alt="Beschreibung des Bildes" class="block-image">
@@ -157,5 +156,22 @@
             <p class="para_c1_line"></p>
         </div>
     </main>
+    <footer class="footer">
+        <div class="icon-and-contact-container">
+            <ul class="icon-and-contact">
+                <img src="pictures/logo.jpg" alt="Falke Dog Coaching Logo" class="logo-image">
+                <p class="footer_para_c1_line"></p>
+                <p class="footer_p">+49(0)157 735 136 94</p>
+                <p class="footer_p">example@falke-dog-coaching.de</p>
+            </ul>
+        </div>
+        <div class="contact-and-impressum-container">
+            <ul class="contact-and-impressum">
+                <button class="contact_button">KONTAKT</button>
+                <p class="footer_para_c1_line_contact_impressum"></p>
+                <button class="impressum_button">IMPRESSUM</button>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
