added pricing to html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="CSS/components/homeText.css">
     <link rel="stylesheet" href="CSS/components/historieText.css">
     <link rel="stylesheet" href="CSS/components/footer.css">
+    <link rel="stylesheet" href="CSS/components/sectionPricing.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -175,6 +176,30 @@
                         <button class="block-list-button">Preise und Kontakt</button>
                     </ul>
                 </div>
+            </div>
+        </section>
+        <p class="para_c1_line"></p>
+        <section class="section_pricing">
+            <h2 class="block-title">PREISE UND KONTAKT</h2>
+            <div class="content-container">
+                <img src="pictures/sectionC4Pic.png" alt="Beschreibung des Bildes" class="block-image">
+                <ul class="einzeltrainingList">
+                    <p><u>Einzeltraining</u></p>
+                    <li>a 60 Minuten € 60.-</li>
+                    <li>jede weitere halbe Stunde € 30.-</li>
+                    <p></p>
+                    <p><u>Gruppentraining</u></p>
+                    <p>(Auf Anfrage ab 3 Teilnehmer möglich)</p>
+                    <li>a 60 Minuten € 20.-/Person</li>
+                    <li>jede weitere halbe Stunde € 10.-/Person</li>
+                    <p class="sachkundeprüfung">Sachkundeprüfung</p>
+                    <li>pro Test und pro Person € 40.-</li>
+                    <p></p>
+                    <p><u>Verhaltensüberprüfungen:</u></p>
+                    <li>Ca. 1.5 Stunden € 250.-</li>
+                    <p></p>
+                    <li>Sminare & Workshops auf Anfrage</li>
+                </ul>
             </div>
         </section>
         <p class="para_c1_line"></p>
