added css to pricing-section

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="block">
-                <h2 class="block-title">TEAM-ARBEIT / ANLAGEFÖRDERUNG</h2>
+                <h2 class="block-title">DIENSTHUNDETRAINING</h2>
                 <div class="content-container">
                     <ul class="block-list">
                         <p class="block-list-text">Sie betreiben ein Sicherheitsunternehmen</p>
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <div class="block">
-                <h2 class="block-title">TEAM-ARBEIT / ANLAGEFÖRDERUNG</h2>
+                <h2 class="block-title">WORKSHOPS / SONSTIGES</h2>
                 <div class="content-container">
                     <ul class="block-list">
                         <p class="block-list-text">Sie möchten mehr über Hunde wissen?</p>
@@ -180,26 +180,41 @@
         </section>
         <p class="para_c1_line"></p>
         <section class="section_pricing">
-            <h2 class="block-title">PREISE UND KONTAKT</h2>
-            <div class="content-container">
-                <img src="pictures/sectionC4Pic.png" alt="Beschreibung des Bildes" class="block-image">
-                <ul class="einzeltrainingList">
-                    <p><u>Einzeltraining</u></p>
-                    <li>a 60 Minuten € 60.-</li>
-                    <li>jede weitere halbe Stunde € 30.-</li>
-                    <p></p>
-                    <p><u>Gruppentraining</u></p>
-                    <p>(Auf Anfrage ab 3 Teilnehmer möglich)</p>
-                    <li>a 60 Minuten € 20.-/Person</li>
-                    <li>jede weitere halbe Stunde € 10.-/Person</li>
-                    <p class="sachkundeprüfung">Sachkundeprüfung</p>
-                    <li>pro Test und pro Person € 40.-</li>
-                    <p></p>
-                    <p><u>Verhaltensüberprüfungen:</u></p>
-                    <li>Ca. 1.5 Stunden € 250.-</li>
-                    <p></p>
-                    <li>Sminare & Workshops auf Anfrage</li>
-                </ul>
+            <div class="block_pricing"> 
+                <h2 class="block_title_pricing">PREISE UND KONTAKT</h2>
+                <div class="content-container">
+                    <img src="pictures/sectionCPricing.png" alt="Beschreibung des Bildes" class="block_pricing_image">
+                    <ul class="training_type_list">
+                        <p><u>Einzeltraining:</u></p>
+                        <li>a 60 Minuten € 60.-</li>
+                        <li>jede weitere halbe Stunde € 30.-</li>
+                        <p></p>
+                        <p><u>Gruppentraining:</u></p>
+                        <p>(Auf Anfrage ab 3 Teilnehmer möglich)</p>
+                        <li>a 60 Minuten € 20.-/Person</li>
+                        <li>jede weitere halbe Stunde € 10.-/Person</li>
+                        <p><u>Sachkundeprüfung:</u></p>
+                        <li>pro Test und pro Person € 40.-</li>
+                        <p></p>
+                        <p><u>Verhaltensüberprüfungen:</u></p>
+                        <li>Ca. 1.5 Stunden € 250.-</li>
+                        <p></p>
+                        <li>Sminare & Workshops auf Anfrage</li>
+                        <div class="leistungen_typ_container">
+                            <select name="leistungenType" id="leistungenType">
+                                <option value="leistungen_listbox">LEISTUNGEN</option>
+                                <option value="klassisch_listbox">Klassisches Hundetraining</option>
+                                <option value="teamarbeit_listbox">Team-Arbeit und Anlageförderung</option>
+                                <option value="diensthund_listbox">Diensthundetraining</option>
+                                <option value="workshops_listbox">Workshops / Sonstiges</option>
+                            </select>
+                            <button onclick="sendEmailWithLeistungsType()" class="leistungen_type_button">ABSENDEN</button>
+                            <script>
+
+                            </script>
+                        </div>
+                    </ul>
+                </div>
             </div>
         </section>
         <p class="para_c1_line"></p>
