--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="CSS/components/historieText.css">
     <link rel="stylesheet" href="CSS/components/footer.css">
     <link rel="stylesheet" href="CSS/components/sectionPricing.css">
+    <link rel="stylesheet" href="CSS/components/infoBox.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -79,31 +80,47 @@
         </div>
         <div class="container1">
             <p class="para_c1">INDIVIDUELLES COACHING FÜR MENSCH UND HUND</p>
-            <div class="image-with-info">
-                <img src="pictures/underHeaderPic.png" alt="" class="pic_c1">
-                <div class="info-box">
-                    <h1>MEIN HUNDETRAINING</h1>
-                    <p>Mehr als nur Training: Gemeinsames <br> Lernen für eine vertrauensvolle <br> Partnerschaft zwischen Mensch und Hund <br> benötigt mehr als stringentes Lernen von <br> Grundübungen.</p>
-                    <button class="button-in-box">DETAILS</button>
+            <div class="home-text">
+                <div class="home_text_container">
+                    <p class="home_main_text">Sie suchen ein exakt auf Sie und Ihren Hund zugeschnittenes Trainingsprogramm?
+                    Ihr Vierbeiner ist Ihr Arbeitskollege und Sie benötigen eine spezielle Ausbildung?
+                    Sie möchten den Hundeführerschein machen oder brauchen eine Wesensüberprüfung für Ihren Hund?
+                    Ihr Vierbeiner stellt Sie vor eine spezielle Herausforderung?
+                    Dann sind Sie bei mir genau richtig!
+                    Ich arbeite mit Ihnen gemeinsam am Aufbau von gegenseitigem Verständnis und Vertrauen – basierend auf neuesten wissenschaftlichen Erkenntnissen, meiner jahrelangen Erfahrung und meiner Leidenschaft für Hunde.
+                    Dabei berücksichtige ich sowohl die Natur des Hundes als auch Ihre persönlichen Wünsche und Ziele!
+                    Erfahren Sie hier mehr über meine Leistungen.
+                    Sie haben Interesse oder noch Rückfragen?
+                    Kontaktieren Sie mich gerne für ein unverbindliches Kennenlerngespräch. Ich freue mich auf Sie und Ihren Hund!</p>
+                    <p></p>
+                    <p class="home_main_text">Ihre Jennifer Falke</p>
+                    <p class="para_c1_line" id="home"></p>
                 </div>
             </div>
-            <p class="para_c1_line" id="home"></p>
-        </div>
-        <div class="home_text_container">
-          <h2 class="home_text">MEHR ALS HUNDETRAINING</h2>
-            <p class="home_main_text">Sie suchen ein exakt auf Sie und Ihren Hund zugeschnittenes Trainingsprogramm?</p>
-            <p class="home_main_text">Ihr Vierbeiner ist Ihr Arbeitskollege und Sie benötigen eine spezielle Ausbildung?</p>
-            <p class="home_main_text">Sie möchten den Hundeführerschein machen oder brauchen eine Wesensüberprüfung für Ihren Hund?</p>
-            <p class="home_main_text">Ihr Vierbeiner stellt Sie vor eine spezielle Herausforderung?</p>
-            <p class="home_main_text">Dann sind Sie bei mir genau richtig!</p>
-            <p class="home_main_text">Ich arbeite mit Ihnen gemeinsam am Aufbau von gegenseitigem Verständnis und Vertrauen – basierend auf neuesten wissenschaftlichen Erkenntnissen, meiner jahrelangen Erfahrung und meiner Leidenschaft für Hunde.</p>
-            <p class="home_main_text">Dabei berücksichtige ich sowohl die Natur des Hundes als auch Ihre persönlichen Wünsche und Ziele!</p>
-            <p class="home_main_text">Erfahren Sie hier mehr über meine Leistungen.</p>
-            <p class="home_main_text">Sie haben Interesse oder noch Rückfragen?</p>
-            <p class="home_main_text">Kontaktieren Sie mich gerne für ein unverbindliches Kennenlerngespräch. Ich freue mich auf Sie und Ihren Hund!</p>
-            <p></p>
-            <p class="home_main_text">Ihre Jennifer Falke</p>
-        </div>
+        </div> 
+        <img src="pictures/underHeaderPic.png" alt="" class="pic_c1">
+        <div class="info-box"> 
+            <h1>MEIN HUNDETRAINING</h1>
+            <p class="phylosophie_text">Wie jedes Lebewesen ist auch jeder Hund individuell, hat unterschiedliche Charakterzüge,
+                Prägungen, Interessen und Ängste. <br>Die Konstellation unserer Hunde ist abhängig von seinen
+                bisherigen Erfahrungen und dem Erbe, welches seine jeweiligen Vorfahren ihm mit auf den
+                Weg gegeben haben.<br>Deswegen reagieren unsere Hunde genauso wie wir Menschen auf
+                bestimmte Situationen mit unterschiedlichen Reaktionen.<br>
+                Um erfolgreich zu sein gilt es, die positiven Eigenschaften des Hundes hervorzuheben, zu
+                nutzen, auszubauen und negative Eigenschaften möglichst auszugleichen.<br> Aus diesem
+                Grund erarbeite ich mit Ihnen gemeinsam ein auf den einzelnen Hund zugeschnittenes
+                Trainingsmodell, das aus unterschiedlichen Elementen des Hunde-Coachings
+                zusammengestellt wird. Und auch Sie stehen bei mir im Vordergrund, da nur Sie durch das
+                Erlangen des Wissens und durch das Verständnis der Verhaltensweisen und
+                Kommunikationsarten Ihres Hundes eine Verständigung erreichen und das Tier erfolgreich
+                und auf einer artgerechten Ebene führen können.
+                Zu Beginn steht die Analyse Ihres Begleiters. <br>Seine Anlagen, sowohl positiver wie negativer
+                Natur, müssen gründlich erkundet werden, um optimale Voraussetzungen zu schaffen.
+                <br>Deshalb beginnt das Training bei „Falke Dog Coaching“ grundsätzlich mit Individualstunden.
+                <br><br>Mein Ziel ist es, Ihnen ohne jeglichen Leistungsdruck eine entspannte und freudige
+                Zusammenarbeit mit Ihrem Hund zu ermöglichen, die Sie gemeinsam an Ihr gewünschtes
+                Ziel bringt.</p>
+        </div>          
         <p class="para_c1_line" id="leistungen"></p>
         <section class="section">
             <div class="block">
@@ -178,7 +195,7 @@
                 </div>
             </div>
         </section>
-        <p class="para_c1_line"></p>
+        <p class="para_c1_line" id="preise"></p>
         <section class="section_pricing">
             <div class="block_pricing"> 
                 <h2 class="block_title_pricing">PREISE UND KONTAKT</h2>
