--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
                         <button class="block-list-button">Preise und Kontakt</button>
                     </ul>
                 </div>
-            </div>                    
+            </div> 
+            <p class="para_c1_line_small_window"></p>                   
             <div class="block">
                 <h2 class="block-title">TEAM-ARBEIT / ANLAGEFÖRDERUNG</h2>
                 <p class="block-text">Ist Ihr Hund ein Jäger? Oder ein echter Nasenprofi? Wir finden gemeinsam heraus, wo die Stärken Ihres Hundes liegen und wie Sie für eine optimale Auslastung sorgen können.</p>
@@ -158,17 +159,12 @@
                     </ul>
                 </div>
             </div>
+            <p class="para_c1_line_small_window"></p>                   
             <div class="block">
                 <h2 class="block-title">DIENSTHUNDETRAINING</h2>
                 <div class="content-container">
                     <ul class="block-list">
-                        <p class="block-list-text">Sie betreiben ein Sicherheitsunternehmen</p>
-                        <p class="block-list-text">oder sind Diensthundeführer und erfüllen</p>
-                        <p class="block-list-text">damit die nötige gesetzliche Voraussetzung</p>
-                        <p class="block-list-text">einen Hund seinen Anlagen enstprechend</p>
-                        <p class="block-list-text">als Schutz- oder Sprengstoffspürhund </p>
-                        <p class="block-list-text">auszubilden.</p>
-                        <p class="block-list-text">Dann kontaktieren Sie mich gerne.</p>
+                        <p class="block-list-text">Sie betreiben ein Sicherheitsunternehmen oder sind Diensthundeführer und erfüllen damit die nötige gesetzliche Voraussetzung einen Hund seinen Anlagen enstprechend als Schutz- oder Sprengstoffspürhund auszubilden. Dann kontaktieren Sie mich gerne.</p>
                     </ul>
                     <ul class="image-button-container">
                         <img src="pictures/sectionC3Pic.png" alt="Beschreibung des Bildes" class="block-image">
@@ -176,6 +172,7 @@
                     </ul>
                 </div>
             </div>
+            <p class="para_c1_line_small_window"></p>                   
             <div class="block">
                 <h2 class="block-title">WORKSHOPS / SONSTIGES</h2>
                 <div class="content-container">
