--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 window.addEventListener('scroll', function() {
                     var scrollPosition = window.pageYOffset;
                     var headerPic = document.getElementById('headerPic');
-                    headerPic.style.transform = 'translateY(' + scrollPosition * 0.3 + 'px)'; // Der Multiplikator 0.3 bestimmt die Geschwindigkeit des "Mitrollens". Passen Sie diesen Wert nach Bedarf an.
+                    headerPic.style.transform = 'translateY(' + scrollPosition * 0.5 + 'px)'; 
                 });
                 </script>                
         </div>
@@ -100,7 +100,7 @@
         </div> 
         <img src="pictures/underHeaderPic.png" alt="" class="pic_c1">
         <div class="info-box"> 
-            <h1>MEIN HUNDETRAINING</h1>
+            <h1 class="header_mein_hundetraining">MEIN HUNDETRAINING</h1>
             <p class="phylosophie_text">Wie jedes Lebewesen ist auch jeder Hund individuell, hat unterschiedliche Charakterzüge,
                 Prägungen, Interessen und Ängste. <br>Die Konstellation unserer Hunde ist abhängig von seinen
                 bisherigen Erfahrungen und dem Erbe, welches seine jeweiligen Vorfahren ihm mit auf den
