--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=0.7"> 
     <title>Falke Dog Coaching</title>
     <link rel="stylesheet" href="CSS/utils/styles.css">
     <link rel="stylesheet" href="CSS/components/header.css">
@@ -22,7 +22,7 @@
             <img src="pictures/logo.jpg" alt="Falke Dog Coaching Logo" class="logo-image">
         </div>
 
-        <div onclick="scrollToElementHome()" class="nav-item"><a href="Home" class="nav-link">HOME</a></div>
+        <div onclick="scrollToElementHome()" class="nav-item"><a class="nav-link">HOME</a></div>
         <script>
             function scrollToElementHome() {
                 document.getElementById("home").scrollIntoView({
@@ -31,7 +31,7 @@
             }
         </script>
 
-        <div onclick="scrollToElementLeistung()" class="nav-item"><a href="Leistungen" class="nav-link">LEISTUNGEN</a></div>
+        <div onclick="scrollToElementLeistung()" class="nav-item"><a class="nav-link">LEISTUNGEN</a></div>
         <script>
             function scrollToElementLeistung() {
                 document.getElementById("leistungen").scrollIntoView({
@@ -40,7 +40,7 @@
             }
         </script>
 
-        <div onclick="scrollToElementPreise()" class="nav-item"><a href="Preise" class="nav-link">PREISE</a></div>
+        <div onclick="scrollToElementPreise()" class="nav-item"><a class="nav-link">PREISE</a></div>
         <script>
             function scrollToElementPreise() {
                 document.getElementById("preise").scrollIntoView({
@@ -49,7 +49,7 @@
             }
         </script>
 
-        <div onclick="scrollToElementHistorie()" class="nav-item"><a href="Historie" class="nav-link">HISTORIE</a></div>
+        <div onclick="scrollToElementHistorie()" class="nav-item"><a class="nav-link">HISTORIE</a></div>
         <script>
             function scrollToElementHistorie() {
                 document.getElementById("historie").scrollIntoView({
@@ -57,7 +57,7 @@
                 });
             }
         </script>
-        <div onclick="scrollToElementRefernzen()" class="nav-item"><a href="Referenzen" class="nav-link">REFERENZEN</a></div>
+        <div onclick="scrollToElementRefernzen()" class="nav-item"><a class="nav-link">REFERENZEN</a></div>
         <script>
             function scrollToElementRefernzen() {
                 document.getElementById("referenzen").scrollIntoView({
@@ -85,7 +85,7 @@
                     <p class="home_main_text">Sie suchen ein exakt auf Sie und Ihren Hund zugeschnittenes Trainingsprogramm?
                     Ihr Vierbeiner ist Ihr Arbeitskollege und Sie benötigen eine spezielle Ausbildung?
                     Sie möchten den Hundeführerschein machen oder brauchen eine Wesensüberprüfung für Ihren Hund?
-                    Ihr Vierbeiner stellt Sie vor eine spezielle Herausforderung?
+                    Ihr Vierbeiner stellt Sie vor eine spezielle Herausforderung?<br>
                     Dann sind Sie bei mir genau richtig!
                     Ich arbeite mit Ihnen gemeinsam am Aufbau von gegenseitigem Verständnis und Vertrauen – basierend auf neuesten wissenschaftlichen Erkenntnissen, meiner jahrelangen Erfahrung und meiner Leidenschaft für Hunde.
                     Dabei berücksichtige ich sowohl die Natur des Hundes als auch Ihre persönlichen Wünsche und Ziele!
@@ -123,6 +123,7 @@
         </div>          
         <p class="para_c1_line" id="leistungen"></p>
         <section class="section">
+            <p class="para_c1_line_small_window" id="leistungen"></p>                   
             <div class="block">
                 <h2 class="block-title">KLASSISCHES HUNDETRAINING</h2>
                 <p class="block-text">Alles rund um das Leben mit Hund im Alltag. So werden Sie zu einem guten!</p>
@@ -142,7 +143,7 @@
                     </ul>
                 </div>
             </div> 
-            <p class="para_c1_line_small_window"></p>                   
+            <p class="para_c1_line_small_window"></p>                                  
             <div class="block">
                 <h2 class="block-title">TEAM-ARBEIT / ANLAGEFÖRDERUNG</h2>
                 <p class="block-text">Ist Ihr Hund ein Jäger? Oder ein echter Nasenprofi? Wir finden gemeinsam heraus, wo die Stärken Ihres Hundes liegen und wie Sie für eine optimale Auslastung sorgen können.</p>
@@ -177,13 +178,10 @@
                 <h2 class="block-title">WORKSHOPS / SONSTIGES</h2>
                 <div class="content-container">
                     <ul class="block-list">
-                        <p class="block-list-text">Sie möchten mehr über Hunde wissen?</p>
-                        <p class="block-list-text">Oder benötigen eine individuelle Beratung</p>
-                        <p class="block-list-text">vor der Anschaffung Ihres Hundes?</p>
-                        <p class="block-list-text">Sie benötigen die erforderliche</p>
-                        <p class="block-list-text">Erlaubnis zum Halten von großen</p>
-                        <p class="block-list-text">Hunden oder Hunden bestimmter</p>
-                        <p class="block-list-text">Rassen. Dann kontaktieren Sie mich!</p>
+                        <p class="block-list-text">Sie möchten mehr über Hunde wissen? Oder benötigen eine individuelle Beratung
+                                                    vor der Anschaffung Ihres Hundes? Sie benötigen die erforderliche
+                                                    Erlaubnis zum Halten von großen Hunden oder Hunden bestimmter
+                                                    Rassen. Dann kontaktieren Sie mich!</p>
                     </ul>
                     <ul class="image-button-container">
                         <img src="pictures/sectionC4Pic.png" alt="Beschreibung des Bildes" class="block-image">
@@ -236,26 +234,24 @@
         <div class="historie_text_container">
           <p class="para_c1_line" id="historie"></p>
           <h2 class="historie_text">HISTORIE</h2>
-            <p class="historie_main_text">Die Leidenschaft von Hunden umgeben zu sein, mich mit Ihnen auseinander zu setzen und sie zu verstehen begann bereits sehr früh.</p>
-            <p class="historie_main_text">Nachdem ich sämtliche Nachbarshunde ausführte, mich Stunden lang mit Hundebüchern beschäftigte, begann ich mit 10 Jahren ehrenamtlich Tierheimhunde auszuführen.</p>
-            <p class="historie_main_text">Mit 12 Jahren war es dann endlich soweit, meine erste Hündin durfte mit nach Hause.
-            <p class="historie_main_text">Sie begleitete mich ganze 16 Jahre!</p>
-            <p class="historie_main_text">Der Wolf als Vorfahre des Hundes interessiert mich besonders, da in jedem Haushund seine Gene enthalten sind.</p>
-            <p class="historie_main_text">Jedoch ist die Wesensdistanz zwischen beiden recht groß.</p>
-            <p class="historie_main_text">Um den wölfischen Aspekten unserer modernen Hunde näherzukommen, entschied ich mich, den Straßenhund zu erforschen.</p>
-            <p class="historie_main_text">Hierfür reiste ich 2007 für ein Jahr nach Russland, da die Population der freilebenden Hunde dort besonders groß ist.</p>
-            <p class="historie_main_text">Die dabei gewonnenen Erfahrungen sind mir bei meiner Arbeit eine große Hilfe.</p>
-            <p class="historie_main_text">Nach meiner Rückkehr beschloss ich, auf meinen dortigen Beobachtungen aufzubauen und begann meine Ausbildung als Hunde-Coach und Verhaltensberaterin bei „Kennel 101“ (Ausbildungszentrum für Sprengstoffspür- und Diensthunde sowie Hundepension und Zuchtstätte</p>
-            <p class="historie_main_text">Das Wissen meines Mentors bei „Kennel 101“ basiert auf einer 25-jährigen erfolgreichen Arbeit auf internationaler Ebene.</p>
-            <p class="historie_main_text">Während meiner Ausbildung erhielt ich den Sachkundenachweis gem. § 11 Abs. 2 TierSchG durch eine persönliche Prüfung des Veterinäramtes.</p>
-            <p class="historie_main_text">Seit April 2010 arbeite ich als selbstständige Hundeausbilderin und Verhaltensberaterin.</p>
-            <p class="historie_main_text">Im Dezember 2014 erhielt ich die nach neuesten Gesetzen erforderliche Zertifizierung gem. § 11 Abs. 1 Nr. 8 f TierSchG. Im Jahre 2016 wurde diese um den § 11 Abs. 1 Nr. 6 TierSchG erweitert.</p>
-            <p class="historie_main_text">Um mir rund um das Thema Tier &amp; Natur noch mehr fundiertes Wissen anzueignen, machte ich 2014 darüber hinaus den Jagdschein.</p>
-            <p class="historie_main_text">2018 erweiterte ich mein Portfolio in dem ich die Prüfung für Sachverständige beim LANUV NRW ablegte.</p>
-            <p class="historie_main_text">Hierdurch bin ich dazu berechtigt Verhaltensüberprüfungen für Hunde bestimmter Rassen durchzuführen und den Sachkundenachweis abzunehmen.</p>
-            <p class="historie_main_text">Im Jahr 2021 schrieb ich meine Diplomarbeit zum Thema „Bestrafung von Diensthunden in der Diensthundeausbildung“.</p>
-            <p class="historie_main_text">Aufbauend auf meinen Erkenntnissen aus dieser Forschung schreibe ich heute an meiner Doktorarbeit zu diesem und weiteren Themen rund um das Thema Diensthundewesen.</p>
-            <p class="historie_main_text">Seit 2023 bin ich Teil der Mammalia AG, welche durch Professor Dr. Udo Gansloßer geleitet wird.</p>
+          <p class="historie_main_text">Die Leidenschaft von Hunden umgeben zu sein, mich mit Ihnen auseinander zu setzen und sie zu verstehen begann bereits sehr früh.
+            Nachdem ich sämtliche Nachbarshunde ausführte, mich Stunden lang mit Hundebüchern beschäftigte, begann ich mit 10 Jahren ehrenamtlich Tierheimhunde auszuführen.
+            Mit 12 Jahren war es dann endlich soweit, meine erste Hündin durfte mit nach Hause.
+            Sie begleitete mich ganze 16 Jahre!
+            Der Wolf als Vorfahre des Hundes interessiert mich besonders, da in jedem Haushund seine Gene enthalten sind.
+            Jedoch ist die Wesensdistanz zwischen beiden recht groß.
+            Um den wölfischen Aspekten unserer modernen Hunde näherzukommen, entschied ich mich, den Straßenhund zu erforschen.
+            Hierfür reiste ich 2007 für ein Jahr nach Russland, da die Population der freilebenden Hunde dort besonders groß ist.
+            Die dabei gewonnenen Erfahrungen sind mir bei meiner Arbeit eine große Hilfe.
+            Nach meiner Rückkehr beschloss ich, auf meinen dortigen Beobachtungen aufzubauen und begann meine Ausbildung als Hunde-Coach und Verhaltensberaterin bei „Kennel 101“ 
+            (Ausbildungszentrum für Sprengstoffspür- und Diensthunde sowie Hundepension und Zuchtstätte) Das Wissen meines Mentors bei „Kennel 101“ basiert auf einer 25-jährigen erfolgreichen 
+            Arbeit auf internationaler Ebene. Während meiner Ausbildung erhielt ich den Sachkundenachweis gem. § 11 Abs. 2 TierSchG durch eine persönliche Prüfung des Veterinäramtes. Seit April 2010 
+            arbeite ich als selbstständige Hundeausbilderin und Verhaltensberaterin. Im Dezember 2014 erhielt ich die nach neuesten Gesetzen erforderliche Zertifizierung gem. § 11 Abs. 1 Nr. 8 f 
+            TierSchG. Im Jahre 2016 wurde diese um den § 11 Abs. 1 Nr. 6 TierSchG erweitert. Um mir rund um das Thema Tier &amp; Natur noch mehr fundiertes Wissen anzueignen, machte ich 2014 darüber
+            hinaus den Jagdschein. 2018 erweiterte ich mein Portfolio in dem ich die Prüfung für Sachverständige beim LANUV NRW ablegte. Hierdurch bin ich dazu berechtigt Verhaltensüberprüfungen für 
+            Hunde bestimmter Rassen durchzuführen und den Sachkundenachweis abzunehmen. Im Jahr 2021 schrieb ich meine Diplomarbeit zum Thema „Bestrafung von Diensthunden in der Diensthundeausbildung“. 
+            Aufbauend auf meinen Erkenntnissen aus dieser Forschung schreibe ich heute an meiner Doktorarbeit zu diesem und weiteren Themen rund um das Thema Diensthundewesen. Seit 2023 bin ich Teil der 
+            Mammalia AG, welche durch Professor Dr. Udo Gansloßer geleitet wird.</div>p>
             <p class="para_c1_line"></p>
         </div>
     </main>
